fix a bug reported by u/ESTLIN-EESTI

--- a/resubscribe.html
+++ b/resubscribe.html
@@ -27,7 +27,7 @@ document.getElementById("button").style.left = Math.random()*90+"%";
 document.getElementById("button").style.top = Math.random()*90+"%";
 function unsubscribe() {
 	document.getElementById("test").innerHTML = `<span>Thank you for subscribing! (meow)</span><br>
-	<span>Click <a href="index.html">here</a> to unsubscribe.</span>`;
+	<span>Click <a href=".">here</a> to unsubscribe.</span>`;
 }
 </script>
 </body>
