fix bug reported by u/NotReallyAaronDover

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <input type="checkbox"><span>Cool Cat Facts</span><br>
 <input type="checkbox"><span>Exclusive offers</span><br>
 </label>
-<input class="button" id="button" type="submit" value="Unsubscribe">
+<input class="button" id="button" type="submit" value="">
 </form>
 </div>
 <script>
